# qrelay

./: .gitignore  LICENSE.txt  Makefile.am  README.rst  autogen.sh  config.lua  configure.ac  meson.build  meson_options.txt  qrelay.conf
.github/workflows/: build.yml
debian/: .gitignore  changelog  cm4all-qrelay-doc.install  cm4all-qrelay.default  cm4all-qrelay.dirs  cm4all-qrelay.init  cm4all-qrelay.install  cm4all-qrelay.lintian-overrides  cm4all-qrelay.postinst  cm4all-qrelay.postrm  cm4all-qrelay.service  cm4all-qrelay.socket  cm4all-qrelay.sysusers  control  copyright  rules
debian/source/: lintian-overrides
doc/: Makefile  conf.py  index.rst  qrelay.xml
src/: Action.hxx  BasicRelay.cxx  BasicRelay.hxx  CgroupProc.cxx  CgroupProc.hxx  CommandLine.cxx  CommandLine.hxx  Config.cxx  Config.hxx  Connection.cxx  Connection.hxx  ExecRelay.cxx  ExecRelay.hxx  ExitStatus.hxx  Handler.hxx  Instance.cxx  Instance.hxx  LAction.cxx  LAction.hxx  LAddress.cxx  LAddress.hxx  LMail.cxx  LMail.hxx  LResolver.cxx  LResolver.hxx  Listener.hxx  Logger.hxx  Mail.cxx  Mail.hxx  Main.cxx  MountProc.cxx  MountProc.hxx  MutableMail.cxx  MutableMail.hxx  QmqpRelayConnection.cxx  QmqpRelayConnection.hxx  QmqpRelayServer.hxx  RawExecRelay.cxx  RawExecRelay.hxx  RemoteRelay.cxx  (+3 more)
src/djb/: NetstringClient.cxx  NetstringClient.hxx  NetstringError.cxx  NetstringError.hxx  NetstringGenerator.cxx  NetstringGenerator.hxx  NetstringInput.cxx  NetstringInput.hxx  NetstringOutput.cxx  NetstringOutput.hxx  NetstringParser.cxx  NetstringParser.hxx  NetstringServer.cxx  NetstringServer.hxx  QmqpMail.cxx  QmqpMail.hxx
src/event/: Base.hxx  DeferEvent.hxx  Event.cxx  Event.hxx  FunctionEvent.cxx  FunctionEvent.hxx  Loop.hxx  ShutdownListener.cxx  SignalEvent.hxx
src/io/: MultiWriteBuffer.cxx  MultiWriteBuffer.hxx  TextFile.cxx  TextFile.hxx  WriteBuffer.cxx  WriteBuffer.hxx
src/lua/: Class.hxx  Util.hxx  Value.hxx
src/net/: ConnectSocket.cxx  ConnectSocket.hxx  SendBuffer.cxx  SendBuffer.hxx  ServerSocket.cxx  ServerSocket.hxx  SocketAddress.cxx  SocketAddress.hxx  SocketDescriptor.cxx  SocketDescriptor.hxx  StaticSocketAddress.cxx  StaticSocketAddress.hxx  TemplateServerSocket.hxx
src/system/: SetupProcess.cxx  SetupProcess.hxx
src/util/: ConstBuffer.hxx  HugeAllocator.cxx  HugeAllocator.hxx  OstreamException.hxx  Range.hxx  StringUtil.cxx  StringUtil.hxx  Tokenizer.cxx  Tokenizer.hxx
subprojects/: .gitignore
test/: ReadProcessCgroup.cxx  TestNetstringParser.cxx  TestQmqpMail.cxx  meson.build  record.py  test.py
test/config/: config.lua
